--- a/ARTIGO/artigo.bib
+++ b/ARTIGO/artigo.bib
@@ -4,17 +4,51 @@
  HOWPUBLISHED={\url{http://www.igeo.pt/DadosAbertos/Listagem.aspx}},
  NOTE = {Acedido em Março, 2016}
 }
-
 @MISC{gbif,
  AUTHOR={GBIF},
  TITLE={{API de espécies do GBIF}},
  HOWPUBLISHED={\url{http://www.gbif.org/developer/species}},
  NOTE = {Acedido em Março, 2016}
 }
-
 @MISC{googlemaps,
  AUTHOR={Google},
  TITLE={{Google Maps API}},
  HOWPUBLISHED={\url{https://developers.google.com/maps/documentation/javascript/}},
  NOTE = {Acedido em Março, 2016}
+}
+@MISC{rarespecies,
+ AUTHOR={Michigan Natural Features Inventory},
+ TITLE={{Rare Species Explorer}},
+ HOWPUBLISHED={\url{https://mnfi.anr.msu.edu/explorer/search.cfm}},
+ NOTE = {Acedido em Maio, 2016}
+}
+@MISC{speciesexplorer,
+ AUTHOR={Phantom App Development},
+ TITLE={{Species Explorer}},
+ HOWPUBLISHED={\url{https://play.google.com/store/apps/details?id=air.im.phantom.species&hl=pt_PT}},
+ NOTE = {Acedido em Maio, 2016}
+}
+@MISC{umbra,
+ AUTHOR={Vasile Jureschi},
+ TITLE={{Umbra}},
+ HOWPUBLISHED={\url{https://play.google.com/store/apps/details?id=org.unchiujar.umbra2}},
+ NOTE = {Acedido em Maio, 2016}
+}
+@MISC{postgis,
+ AUTHOR={PostGIS Project Steering Committee},
+ TITLE={{Postgis}},
+ HOWPUBLISHED={\url{http://postgis.net/}},
+ NOTE = {Acedido em Maio, 2016}
+}
+@MISC{nodejs,
+ AUTHOR={Node.js Foundation},
+ TITLE={{Node.js}},
+ HOWPUBLISHED={\url{https://nodejs.org/en/}},
+ NOTE = {Acedido em Maio, 2016}
+}
+@MISC{postgresql,
+ AUTHOR={PostgreSQL Global Development Group},
+ TITLE={{PostgreSQL}},
+ HOWPUBLISHED={\url{http://www.postgresql.org/}},
+ NOTE = {Acedido em Maio, 2016}
 }
