--- a/ARTIGO/artigo.tex
+++ b/ARTIGO/artigo.tex
@@ -119,13 +119,13 @@ Para além desta introdução, onde se caracterizou o problema abordado por este
 
 \section{Estado da arte}\label{sec:sota}
 
-Existem várias aplicações que permitem a pesquisa de vários tipos de animais ou de plantas. Normalmente estas aplicações mostram informação de uma dada espécie depois do utilizador introduzir o nome comum ou cientifico do animal que procura. Outras aplicações permitem a descoberta de animais exibindo fotografias com informação anexada dos animais. Estas aplicações focam-se normalmente em contextos como animais raros, marinhos, extintos, voadores, etc. Como exemplo destas aplicações existe a Species Explorer e a Rare Species Explorer.
+Existem várias aplicações que permitem a pesquisa de vários tipos de animais ou de plantas. Normalmente estas aplicações mostram informação de uma dada espécie depois do utilizador introduzir o nome comum ou cientifico do animal que procura. Outras aplicações permitem a descoberta de animais exibindo fotografias com informação anexada dos animais. Estas aplicações focam-se normalmente em contextos como animais raros, marinhos, extintos, voadores, etc. Como exemplo destas aplicações existe a Species Explorer~\cite{speciesexplorer} e a Rare Species Explorer~\cite{rarespecies}.
 
-Existem também aplicações dedicadas exclusivamente à descoberta do mapa do mundo, utilizando o mesmo mecanismo presente na Exploracafora, começando com o mapa encoberto e descobrir à medida que o utilizador viaja pelo mundo. Um exemplo dessas aplicações é a Umbra.
+Existem também aplicações dedicadas exclusivamente à descoberta do mapa do mundo, utilizando o mesmo mecanismo presente na Exploracafora, começando com o mapa encoberto e descobrir à medida que o utilizador viaja pelo mundo. Um exemplo dessas aplicações é a Umbra.~\cite{umbra}
 
 A aplicação desenvolvida tem como âmbito os seres vivos existentes no território português e ao contrário das aplicações existentes, esta foca-se na exploração, ou seja, o utilizador é convidado a viajar por Portugal para que possa explorar e ter conhecimento das espécies existentes em cada região, tornado assim a aquisição de conhecimento mais interativa e dinâmica.
 
-Para desenvolver o trabalho escolheu-se PostgreSQL com a extensão Postgis para a base de dados, pois facilita a representação de informação geográfica. Esta extensão permite por exemplo guardar as localizações de cada espécie na forma de polígonos e obter as localizações que contêm um dado ponto geográfico, como a localização do utilizador. Sendo uma aplicação web para dispositivos móveis, desenvolvemos a interface com HTML5, CSS3, Bootstrap e javascript. O servidor é implementado em Nodejs por ser uma tecnologia bastante utilizada atualmente e pelo interesse do grupo em experimentá-la.
+Para desenvolver o trabalho escolheu-se PostgreSQL~\cite{postgresql} com a extensão Postgis~\cite{postgis} para a base de dados, pois facilita a representação de informação geográfica. Esta extensão permite por exemplo guardar as localizações de cada espécie na forma de polígonos e obter as localizações que contêm um dado ponto geográfico, como a localização do utilizador. Sendo uma aplicação web para dispositivos móveis, desenvolvemos a interface com HTML5, CSS3, Bootstrap e javascript. O servidor é implementado em Nodejs~\cite{nodejs} por ser uma tecnologia bastante utilizada atualmente e pelo interesse do grupo em experimentá-la.
 
 %------------------------------------------------
 
@@ -158,7 +158,7 @@ O modelo de dados das respostas do portal iGEO é apresentado na figura \ref{fig
 \end{figure} 
 
 
-Em complementaridade com estes serviços recorre-se a uma API do site GBIF (Global Biodiversity Information Facility) para obter informação mais detalhada sobre cada espécie, como reino, família, imagens, etc. Esta API reúne informação de diversas fontes, contendo no momento informação sobre aproximadamente 1,650,00 espécies. Por fim é necessário recorrer ao Google Maps para mostrar o mapa de Portugal e toda a informação a ele associada.
+Em complementaridade com estes serviços recorre-se a uma API do site GBIF (Global Biodiversity Information Facility) para obter informação mais detalhada sobre cada espécie, como reino, família, imagens, etc.~\cite{gbif} Esta API reúne informação de diversas fontes, contendo no momento informação sobre aproximadamente 1,650,00 espécies. Por fim é necessário recorrer ao Google Maps para mostrar o mapa de Portugal e toda a informação a ele associada.~\cite{googlemaps}
 
 	O modelo de dados da API GBIF depende do serviço utilizado. Pretende-se utilizar o serviço de pesquisa pelo nome científico de um ser vivo, que devolve um conjunto de registos sobre a espécie pesquisada, o modelo está representado na figura  \ref{fig:scientName}. No caso de se obter um registo com uma referência para a página da Wikipédia, pretende-se utilizar a chave dessa referência para obter o conteúdo multimédia, tipicamente uma imagem, utilizada nessa mesma página para identificar o ser vivo e ainda obter a descrição inicial. O modelo das respostas ao conteúdo multimédia e à descrição do servivo estão presentes na imagem \ref{fig:multimedia} e na imagem \ref{fig:descricao}, respetivamente.
 
